<resources>
    <string name="app_name">GitHub User</string>
    <string name="main">Masukkan Username yang Ingin Di Cari</string>
    <string name="desc">Image</string>

    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>

    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="repository">Repository</string>
    <string name="company">Company</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="search">Masukkan pencarian</string>
    <string name="not_found">Username tidak ditemukan</string>
    <string name="kamu_memilih">\"Kamu Memilih \"</string>

</resources>